--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:i99Z9uyLEFcHWZALTeqeSdBy9LSG4HNW/iwsmHt0+b8=
+APP_KEY=base64:WJ/4OMCmKy9jXqjfjXz8HOwX1yQ6GZMEoq6KOi4BgnY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -15,7 +15,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=f231c94c94ba8a
+MAIL_PASSWORD=e254af5fa59802
 MAIL_ENCRYPTION=null
 
 AWS_ACCESS_KEY_ID=
@@ -44,3 +44,8 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 APP_THEME=ezone
+RAJAONGKIR_API_KEY=ece6df5411ed158d4fc1167affd790cf
+RAJAONGKIR_BASE_URL=http://api.rajaongkir.com/starter/
+RAJAONGKIR_ORIGIN=501
+
+MIDTRANS_SERVER_KEY=SB-Mid-server-bMM4onBNnIZgIfJHl0HaEJF5
