--- a/.env
+++ b/.env
@@ -23,11 +23,11 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=f231c94c94ba8a
-MAIL_PASSWORD=e254af5fa59802
+MAIL_USERNAME=a2039741c809d2
+MAIL_PASSWORD=a31057db754e7d
 MAIL_ENCRYPTION=null
 
 AWS_ACCESS_KEY_ID=
