--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laracasts/flash": "^3.2",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.8",
         "midtrans/midtrans-php": "^2.3",
         "spatie/laravel-permission": "^3.17"
     },
